--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/material": "^5.0.0",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/system": "^5.0.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-material-ui-form-validator": "^0.5.1",
     "react-modal": "^3.14.3",
-    "react-native": "^0.65.1",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "1.1.5",
     "react-youtube": "^7.13.1",
-    "redux": "^4.1.1",
-    "typeface-roboto": "0.0.54",
-    "validator": "^13.6.0"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
